Continued adding body html.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,50 @@
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
-    
+<!--Begin Main Content-->
+    <div class="main-content">
+<!--Header Start-->
+      <header class="container">
+        <div class="logo">
+          <img src="./resources/logo-white.png" alt="logo">
+          <span>Tortoiseshell Optics</span>
+        </div>
+        <nav>
+          <ul>
+            <li>Services</li>
+            <li>Products</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
+      </header>
+<!--Header End-->
+<!--Hero Start-->
+      <div class="hero">
+        <div class="cta">
+          <p>DON'T JUST LOOK, SEE.</p>
+        </div>
+      </div>
+<!--Hero End-->
+      <div class="container">
+        <div id="exams" class="callout">
+          <div class="callout-img">
+            <img src="paper-icon.png" alt="">
+          </div>
+          <p>Comprehensive Exams</p>
+        </div>
+        <div id="fittings" class="callout">
+          <div class="callout-img">
+            <img src="ruler-icon.png" alt="">
+          </div>
+          <p>Custom Fittings</p>
+        </div>
+        <div id="delivery" class="callout">
+          <div class="callout-img">
+            <img src="truck-icon.png" alt="">
+          </div>
+          <p>Fast Delivery</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
