--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Tortoiseshell Optics</title>
+    <link rel="stylesheet" href="./resources/css/reset.css">
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
-<!--Begin Main Content-->
-    <div class="main-content">
-<!--Header Start-->
-      <header class="container">
+
+<!--Hero Start-->
+    <div class="hero">
+      <div id="header" class="container">
         <div class="logo">
           <img src="./resources/logo-white.png" alt="logo">
           <span>Tortoiseshell Optics</span>
@@ -21,35 +22,65 @@
             <li>Contact</li>
           </ul>
         </nav>
-      </header>
-<!--Header End-->
-<!--Hero Start-->
-      <div class="hero">
+      </div>
+      <div id="sloganbox" class="container">
         <div class="cta">
-          <p>DON'T JUST LOOK, SEE.</p>
+          <h1>DON'T JUST LOOK, SEE.</h1>
         </div>
       </div>
+    </div>
+
 <!--Hero End-->
-      <div class="container">
+
+<!--Callouts Begin-->
+
+    <div class="container">
+      <div class="callouts">
         <div id="exams" class="callout">
           <div class="callout-img">
-            <img src="paper-icon.png" alt="">
+            <img src="./resources/paper-icon.png" alt="">
           </div>
           <p>Comprehensive Exams</p>
         </div>
         <div id="fittings" class="callout">
           <div class="callout-img">
-            <img src="ruler-icon.png" alt="">
+            <img src="./resources/ruler-icon.png" alt="">
           </div>
           <p>Custom Fittings</p>
         </div>
         <div id="delivery" class="callout">
           <div class="callout-img">
-            <img src="truck-icon.png" alt="">
+            <img src="./resources/truck-icon.png" alt="">
           </div>
           <p>Fast Delivery</p>
         </div>
       </div>
     </div>
+
+<!--Callouts End-->
+
+<!--Bottom Sections Begin-->
+
+    <div class="container">
+      <div class="sections">
+        <div id="philosophy" class="section">
+          <h4>PHILOSOPHY</h4>
+          <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, no matter what. That's why we offer eye exams, custom ffittings, and quick delivery at a low cost. It's your vision that makes ours.</p>
+        </div>
+        <div id="appointments" class="section">
+          <h4>APPOINTMENTS</h4>
+          <p>Schedule an appointment by callis us at (312) 654-0987. We're open Tuesday - Saturday, 9AM - 6PM.</p>
+        </div>
+      </div>
+    </div>
+
+<!--Bottom Sections End-->
+
+    <footer class="container">
+      <div class="footerlogo">
+        <img src="./resources/logo-black.png" alt="">
+        <span>Copyright Tortoiseshell Optics</span>
+      </div>
+    </footer>
   </body>
 </html>
